--- a/src/index.html
+++ b/src/index.html
@@ -4,66 +4,38 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://use.typekit.net/cye3gzj.css">
     <link rel="stylesheet" href="/style.css" />
-    <title>Vite App</title>
+
+    <title>Nambucca Ouster Co.</title>
   </head>
 
-  <body
-    class="
-      min-w-[320px]
-      font-inter
-      text-[#213547] text-base
-      font-normal
-      bg-[#ffffff]
-      dark:bg-[#242424] dark:text-transparent-white
-      m-0
-      flex
-      place-items-center
-      min-h-screen
-    "
-  >
-    <div
-      class="
-        flex flex-col
-        justify-center
-        items-center
-        p-8
-        max-w-[1280px]
-        mx-auto
-      "
-    >
-      <a href="https://vitejs.dev" target="_blank">
-        <img
-          src="/vite.svg"
-          class="will-change-[filter] p-5 h-24 hover:drop-shadow-logo"
-          alt="Vite logo"
-        />
-      </a>
-      <a href="https://tailwindcss.com/" target="_blank">
-        <img
-          src="/tailwindcss.svg"
-          class="will-change-[filter] p-5 h-18 hover:drop-shadow-logo-tw w-auto"
-          alt="TailwindCSS logo"
-        />
-      </a>
-      <h1
-        class="
-          text-6xl
-          my-12
-          bg-gradient-to-r
-          from-green-400
-          to-blue-500
-          p-4
-          bg-clip-text
-          text-transparent
-        "
-      >
-        Hello Vite!
-      </h1>
-      <div class="card">
-        <button id="counter" type="button"></button>
+  <body class="min-w-[320px] text-[#213547] text-base text-center font-normal bg-[#ffffff] dark:bg-[#242424] dark:text-transparent-white m-0 flex place-items-center min-h-screen">
+    <div class="flex flex-col justify-center items-center p-8 max-w-[800px] mx-auto">
+      <div class="logo max-w-[385px] my-[50px] "><img class="w-full h-auto" src="logo.svg"></div>
+      <h2 class="font-semibold">Our Story</h1>
+      <p>When you indulge on a Nambucca Oyster, you are experiencing seven  generations of Tessier Family oyster farming. Originating from the South West of France in the Marennes Oleron basin - the birthplace of the oyster - the Tessier Family has spent decades refining and perfecting the intricate art. Following years in international waters, they decided to explore other horizons, eventually settling down to explore the local rivers and the Sydney Rock Oyster of NSW, cultivating decades of passion and know-how to bring you Nambucca Oysters.</p>
+      <div class="my-[50px]">
+        <h2>Our Products</h2>
+        <p>Our pre-packed ready rock oysters are coming soon! Stay tuned for updates!</p>
       </div>
-      <p class="text-white/50">Click on the Vite logo to learn more</p>
+
+      <div class="grid my-[50px] lg:grid-cols-2 lg:gap-[40px]">
+        
+        <div class="col-span-1 my-[50px] lg:my-0">
+          <h2 class="">Stay Tuned</h2>
+          <p>Join our mailing list to follow our journey and stay updated with our growth!</p>
+        </div>
+
+        <div class="col-span-1 my-[50px] lg:my-0">
+          <h2 class="mb-5">Contact Us</h2>
+          <p>276 Gumma Road, Macksville, NSW 2447</p>
+          <p class="pb-0"><img class="w-[15px] inline mr-2" src="icon-phone.svg"><a href="tel:(02) 65 682 202">(02) 65 682 202</a></p>
+          <p class="pb-0"><img class="w-[15px] inline mr-2" src="icon-web.svg"><a href="https://nambuccaoysterco.com.au">nambuccaoysterco.com.au</a></p>
+          <p class="pb-0"><span><img class="w-[15px] inline mr-2" src="icon-insta.svg"></span><a href="https://www.instagram.com/the_nambucca_oyster_company/?hl=en">the_nambucca_oyster_company</a></p>
+        </div>
+      </div>
+      
     </div>
   </body>
 </html>
