--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://use.typekit.net/cye3gzj.css">
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
 
     <title>Nambucca Ouster Co.</title>
   </head>
 
   <body class="min-w-[320px] text-base text-center font-normal">
     <div class="flex flex-col justify-center items-center p-8 max-w-[900px] mx-auto">
-      <div class="logo max-w-[385px] my-[80px] "><img class="w-full h-auto" src="logo.svg"></div>
+      <div class="logo max-w-[385px] my-[80px] "><img class="w-full h-auto" src="./logo.svg"></div>
       <h2 class="font-semibold">Our Story</h1>
       <p>When you indulge on a Nambucca Oyster, you are experiencing seven  generations of Tessier Family oyster farming. Originating from the South West of France in the Marennes Oleron basin - the birthplace of the oyster - the Tessier Family has spent decades refining and perfecting the intricate art. Following years in international waters, they decided to explore other horizons, eventually settling down to explore the local rivers and the Sydney Rock Oyster of NSW, cultivating decades of passion and know-how to bring you Nambucca Oysters.</p>
       <div class="my-[80px]">
@@ -30,15 +30,15 @@
         <div class="col-span-1 my-[50px] lg:my-0">
           <h2 class="mb-5">Contact Us</h2>
           <p>276 Gumma Road, Macksville, NSW 2447</p>
-          <p class="pb-0"><img class="w-[15px] inline mr-2" src="icon-phone.svg"><a href="tel:(02) 65 682 202">(02) 65 682 202</a></p>
-          <p class="pb-0"><img class="w-[15px] inline mr-2" src="icon-web.svg"><a href="https://nambuccaoysterco.com.au">nambuccaoysterco.com.au</a></p>
-          <p class="pb-0"><span><img class="w-[15px] inline mr-2" src="icon-insta.svg"></span><a href="https://www.instagram.com/the_nambucca_oyster_company/?hl=en">the_nambucca_oyster_company</a></p>
+          <p class="pb-0"><img class="w-[15px] inline mr-2" src="./icon-phone.svg"><a href="tel:(02) 65 682 202">(02) 65 682 202</a></p>
+          <p class="pb-0"><img class="w-[15px] inline mr-2" src="./icon-web.svg"><a href="https://nambuccaoysterco.com.au">nambuccaoysterco.com.au</a></p>
+          <p class="pb-0"><span><img class="w-[15px] inline mr-2" src="./icon-insta.svg"></span><a href="https://www.instagram.com/the_nambucca_oyster_company/?hl=en">the_nambucca_oyster_company</a></p>
         </div>
       </div>
       
     </div>
     <footer class="text-xs">
-      <p>© Copyright 2022 Nambucca Oyster Co. | <a href="https://wearecoast.com.au/">Made by Coast<img class="w-[15px] inline ml-2" src="icon-coast.svg"></a></p>
+      <p>© Copyright 2022 Nambucca Oyster Co. | <a href="https://wearecoast.com.au/">Made by Coast<img class="w-[15px] inline ml-2" src="./icon-coast.svg"></a></p>
     </footer>
       
   </body>
