--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
       </div>
       
     </div>
-    <footer class="text-xs">
+    <footer class="text-xs border-t border-white/30 m-2 max-w-[900px] mx-auto">
       <p>© Copyright 2022 Nambucca Oyster Co. | <a href="https://wearecoast.com.au/">Made by Coast<img class="w-[15px] inline ml-2" src="./icon-coast.svg"></a></p>
     </footer>
       
