--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <body class="min-w-[320px] text-base text-center font-normal">
     <div class="flex flex-col justify-center items-center p-8 max-w-[900px] mx-auto">
       <div class="logo max-w-[385px] my-[80px] "><img class="w-full h-auto" src="./logo.svg"></div>
-      <h2 class="font-semibold">Our Story</h1>
+      <h2 class="font-semibold text-white">Our Story</h1>
       <p>When you indulge on a Nambucca Oyster, you are experiencing seven  generations of Tessier Family oyster farming. Originating from the South West of France in the Marennes Oleron basin - the birthplace of the oyster - the Tessier Family has spent decades refining and perfecting the intricate art. Following years in international waters, they decided to explore other horizons, eventually settling down to explore the local rivers and the Sydney Rock Oyster of NSW, cultivating decades of passion and know-how to bring you Nambucca Oysters.</p>
       <div class="my-[80px]">
         <h2>Our Products</h2>
