--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://use.typekit.net/cye3gzj.css">
     <link rel="stylesheet" href="./style.css" />
 
-    <title>Nambucca Ouster Co.</title>
+    <title>Nambucca Oyster Co.</title>
   </head>
 
   <body class="min-w-[320px] text-base text-center font-normal">
