--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/vite.4a748afd.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/logo.1089cae5.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://use.typekit.net/cye3gzj.css">
     
 
-    <title>Nambucca Ouster Co.</title>
-    <link rel="stylesheet" href="/assets/index.119e1bfb.css">
+    <title>Nambucca Oyster Co.</title>
+    <link rel="stylesheet" href="/assets/index.0b6cb937.css">
   </head>
 
   <body class="min-w-[320px] text-base text-center font-normal">
@@ -61,8 +61,8 @@
           <h2 class="mb-5">Contact Us</h2>
           <p>276 Gumma Road, Macksville, NSW 2447</p>
           <p class="pb-0"><img class="w-[15px] inline mr-2" src="/assets/icon-phone.44c90692.svg"><a href="tel:(02) 65 682 202">(02) 65 682 202</a></p>
-          <p class="pb-0"><img class="w-[15px] inline mr-2" src="/assets/icon-web.83ca9244.svg"><a href="https://nambuccaoysterco.com.au">nambuccaoysterco.com.au</a></p>
-          <p class="pb-0"><span><img class="w-[15px] inline mr-2" src="/assets/icon-insta.89ce65dd.svg"></span><a href="https://www.instagram.com/the_nambucca_oyster_company/?hl=en">the_nambucca_oyster_company</a></p>
+          <p class="pb-0"><img class="w-[15px] inline mr-2" src="/assets/icon-web.83ca9244.svg"><a href="https://www.facebook.com/nicolastessier0/" target="_blank">nambuccaoysterco.com.au</a></p>
+          <p class="pb-0"><span><img class="w-[15px] inline mr-2" src="/assets/icon-insta.89ce65dd.svg"></span><a href="https://www.instagram.com/the_nambucca_oyster_company/?hl=en" target="_blank">the_nambucca_oyster_company</a></p>
         </div>
       </div>
       
