--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
           <h2 class="mb-5">Contact Us</h2>
           <p>276 Gumma Road, Macksville, NSW 2447</p>
           <p class="pb-0"><img class="w-[15px] inline mr-2" src="/assets/icon-phone.44c90692.svg"><a href="tel:(02) 65 682 202">(02) 65 682 202</a></p>
-          <p class="pb-0"><img class="w-[15px] inline mr-2" src="/assets/icon-web.83ca9244.svg"><a href="https://www.facebook.com/nicolastessier0/" target="_blank">nambuccaoysterco.com.au</a></p>
+          <p class="pb-0"><img class="w-[15px] inline mr-2" src="/assets/facebook-line-icon.284f990b.svg"><a href="https://www.facebook.com/nicolastessier0/" target="_blank">nambuccaoysterco.com.au</a></p>
           <p class="pb-0"><span><img class="w-[15px] inline mr-2" src="/assets/icon-insta.89ce65dd.svg"></span><a href="https://www.instagram.com/the_nambucca_oyster_company/?hl=en" target="_blank">the_nambucca_oyster_company</a></p>
         </div>
       </div>
