--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
           <h2 class="mb-5">Contact Us</h2>
           <p>276 Gumma Road, Macksville, NSW 2447</p>
           <p class="pb-0"><img class="w-[15px] inline mr-2" src="./icon-phone.svg"><a href="tel:(02) 65 682 202">(02) 65 682 202</a></p>
-          <p class="pb-0"><img class="w-[15px] inline mr-2" src="./icon-web.svg"><a href="https://www.facebook.com/nicolastessier0/" target="_blank">nambuccaoysterco.com.au</a></p>
+          <p class="pb-0"><img class="w-[15px] inline mr-2" src="./facebook-line-icon.svg"><a href="https://www.facebook.com/nicolastessier0/" target="_blank">nambuccaoysterco.com.au</a></p>
           <p class="pb-0"><span><img class="w-[15px] inline mr-2" src="./icon-insta.svg"></span><a href="https://www.instagram.com/the_nambucca_oyster_company/?hl=en" target="_blank">the_nambucca_oyster_company</a></p>
         </div>
       </div>
