--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
                               
             <div class="mc-field-group">
               <label for="mce-EMAIL" class="hidden">Email Address</label>
-              <input type="email" value="" name="EMAIL" class="required email bg-black border py-1 px-3 text-sm" id="mce-EMAIL" placeholder="Email Address" required>
+              <input type="email" value="" name="EMAIL" class="required email bg-black border py-1 px-3 text-sm text-white" id="mce-EMAIL" placeholder="Email Address" required>
               <span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
             </div>
 
@@ -48,8 +48,8 @@
                 </div>
             </div>
             <div id="mce-responses" class="clear foot mt-3">
-            <div class="response " id="mce-error-response" style="display:none"></div>
-            <div class="response" id="mce-success-response" style="display:none"></div>
+            <div class="response text-white" id="mce-error-response" style="display:none"></div>
+            <div class="response text-white" id="mce-success-response" style="display:none"></div>
           </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
           </form>
           </div>
